--- a/list.html
+++ b/list.html
@@ -10,5 +10,6 @@
     <h1>Danh sách khóa học</h1>
     <h2>Thay đổi danh sách</h2>
     <h3>Xin chào </h3>
+    <h3>Thay đỏi lần 3</h3>
 </body>
 </html>
